# asos

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
project/: admin.py  forms.py  models.py  settings.py  urls.py  views.py
project/migrations/: 0001_initial.py  0002_like_unique_like_per_post_and_more.py  0003_create_categories_data.py
project/static/: style.css
project/templates/: base.html  comment.html  home.html  post_detail.html  settings.html  settingsPass.html  settingsProfile.html
project/templates/auth/: login.html  register.html
project/templates/partials/: images.html
project/templates/post/: createPost.html  post_create.html  post_detail.html  post_list.html
project/templatetags/: asos_tags.py
project/tests/integration/: test_auth_integration.py  test_post_comment_integration.py
project/tests/load/: test_load.py
project/tests/unit/: test_forms.py  test_models.py  test_views.py
