[project]
name = "asos"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Viktor Bojda", email = "viktorbojda17@gmail.com" }
]
dependencies = [
    "django~=4.2",
    "django-model-utils>=5.0.0",
    "black>=24.10.0",
    "django-htmx>=1.21.0",
    "psycopg[binary,pool]>=3.2.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/asos"]
